--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "reset";
+@import "config/colors";
 @import "modules/messages";
+@import "modules/user";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "main_chat";
 @import "side_bar";
+@import "modules/flash";
