グループ管理機能の実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/colors";
 @import "modules/messages";
 @import "modules/user";
+@import "modules/group";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "main_chat";
