--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -46,8 +46,6 @@
     
     &__groups {
       margin-bottom: 40px;
-      font-weight: bold;
-      color: #ffffff;
 
       &__group-name {
         font-size: 15px;
@@ -57,6 +55,11 @@
       &__group-message {
         font-size: 11px;
       }
+    }
+
+    a {
+      text-decoration: none;
+      color: #ffffff;
     }
   }
 }
