--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,14 +4,16 @@
       .side-bar__user-name__top-items__name
         = current_user.name
       .side-bar__user-name__top-items__icons
-        = link_to "#" do
+        = link_to new_group_path do
           =icon('far', 'edit')
         = link_to edit_user_path(current_user) do
           =icon('fas', 'cog')
 
   .side-bar__group-list
-    .side-bar__group-list__groups
-      .side-bar__group-list__groups__group-name
-        test
-      .side-bar__group-list__groups__group-message
-        まだメッセージはありません。
+    - current_user.groups.each do |group|
+      .side-bar__group-list__groups
+      = link_to '#' do
+        .side-bar__group-list__groups__group-name
+          = group.name
+        .side-bar__group-list__groups__group-message
+          まだメッセージはありません。
