--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -13,6 +13,7 @@
 
     &__left-box {
       margin-top: 35px;
+
       &__group-name {
         font-size: 20px;
         color: #333333;
@@ -28,12 +29,16 @@
 
     &__edit-btn {
       height: 40px;
-      color: #38aef0;
       font-size: 16px;
       margin-top: 28px;
       border: 1px solid #38aef0;
       padding: 0 20px;
       line-height: 40px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #38aef0;
     }
   }
 
@@ -41,72 +46,75 @@
     background-color: #fafafa;
     height: calc(100vh - 100px - 90px);
     width: 100%;
-    padding: 35px 40px;
+    padding-top: 35px;
 
-    &__messages {
-      padding-bottom: 46px;
+    .main-list {
+      width: 500px;
+      display: flex;
 
-      &__message-info {
-        display: flex;
-        margin-bottom: 12px;
-        &__user-name {
-          font-size: 16px;
-          color: #333333;
-          font-weight: bold;
-        }
-        &__date {
-          font-size: 12px;
-          color: #999999;
-          margin-left: 10px;
-        }
+      &__name {
+        color: #333333;
+        font-size: 16px;
+        margin-left: 40px;
+        font-weight: bold;
       }
-        
-      &__message {
-        font-size: 14px;
-        color: #434a54;
+
+      &__date {
+        color: #999999;
+        font-size: 12px;
+        margin-left: 10px;
       }
+    }
+
+    .main-message {
+      color: #434a54;
+      font-size: 14px;
+      margin: 12px 0 46px 40px;
     }
   }
 
-  &__form {
+  &__message-form {
     background-color: #d2d2d2;
     height: 90px;
-    width: 100%;
     padding: 20px 40px;
 
-    &__new-message {
+    .new_message {
       display: flex;
 
-      &__input-box {
+      .form-content {
         position: relative;
         width: 100%;
-        
-        &__text{
+
+        &__message{
           height: 50px;
           width: 100%;
           padding: 0 40px 0 10px;
+          color: #434a54;
           border-style: none;
         }
 
-        &__image {
+        &__image{
+          font-size: 1.3rem;
           position: absolute;
           top: 10px;
           right: 10px;
-          font-size: 1.3rem;
-
-          &__file {
+          cursor: pointer;
+          
+          input {
             display: none;
           }
         }
-      }
 
-      &__submit-btn {
+      &__send{ 
         background-color: #38aef0;
-        height: 50px;
         width: 100px;
-        color: #ffffff;
+        height: 50px;
+        padding: 0 30px;
         margin-left: 15px;
+        color: white;
+        cursor: pointer;
       }
-    }
-  }
+      }
+    } 
+  }     
 }
