画像サイズとスクロールを修正

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -47,6 +47,7 @@
     height: calc(100vh - 100px - 90px);
     width: 100%;
     padding-top: 35px;
+    overflow: scroll;
 
     .main-list {
       width: 500px;
